--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fast-two-sms": "^3.0.0",
     "mongoose": "^6.9.1",
     "validator": "^13.9.0"
   }
