--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "convert-csv-to-json": "^1.5.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.9.1",
     "validator": "^13.9.0"
   }
